<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastel_yellow"
    android:fitsSystemWindows="true"
    tools:context=".EditProfileActivity">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/editProfileToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/light_green"
                android:fitsSystemWindows="true"
                android:title="Edit Profile"
                android:titleTextColor="@android:color/white" >
            </androidx.appcompat.widget.Toolbar>
        </
            com.google.android.material.appbar.AppBarLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:padding="24dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/editProfileImage"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_marginBottom="15dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_avatar"
                    app:shapeAppearanceOverlay="@style/CircleImageShape" />
                <EditText
                    android:id="@+id/nameInput"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/rounded_border"
                    android:hint="@string/enter_your_name"
                    android:padding="12dp"
                    android:textSize="16sp" />
                <EditText
                    android:id="@+id/emailInput"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/rounded_border"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:padding="12dp" />
                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/peach"
                    android:text="@string/save"
                    android:textColor="@color/red" />
            </LinearLayout>
        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:menu="@menu/drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>